maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:57: error: method fini is defined twice
  conflicting symbols both originated in file 'plm.runtime31.JediEscaper'
var fini = -1
    ^JediEscaper:63: error: too many arguments for method markAround: (x: Int, y: Int)Unit
				if (num != 9999) markAround(i,j,fini)
                                                           ^